--- a/index.html
+++ b/index.html
@@ -10,10 +10,23 @@
     <title>Наши выполненные работы</title>
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
-    <link rel="stylesheet" href="resource/css/style.css">
-    <link rel="stylesheet" href="resource/css/queries.css">
+    <link rel="stylesheet" href="resource/css/work.css">
+    <link rel="stylesheet" href="resource/css/queries-work.css">
   </head>
 <body>
+  
+  <div class="bt">
+    
+    <a href="call-centr.html" class="btn btn-primary">call-center</a>
+    <a href="crm-new.html" class="btn btn-primary">crm-new</a>
+    <a href="equipment.html" class="btn btn-primary">equipment</a>
+    <a href="industry.html" class="btn btn-primary">industry</a>
+    <a href="ip.html" class="btn btn-primary">ip</a>
+    <a href="news.html" class="btn btn-primary">news</a>
+    <a href="partner.html" class="btn btn-primary">partner</a>
+    
+  </div>
+  
  <div class="our-work">
  
   <div class="container">
@@ -327,13 +340,7 @@ Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deseru
   
   
   
-  
-  
-  <a href="equipment.html">страница</a>
-  <a href="industry.html">страница</a>
-  <a href="ip.html">страница</a>
-  <a href="partner.html">страница</a>
-  
+
   
   
   
